# iris

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
client/: __init__.py  cli.py  sdk.py
client/tui/: __init__.py  __main__.py  app.py  auth.py  styles.tcss
client/tui-node/: package-lock.json  package.json
client/tui-node/src/: api.js  app.js  auth.js  config.js  index.js  theme.js
client/tui/screens/: __init__.py  chat_screen.py  network_screen.py  node_screen.py
clubai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
coordinator/: Dockerfile  __init__.py  account_service.py  accounts.py  auth.py  crypto.py  dashboard.py  database.py  difficulty_classifier.py  economics.py  main.py  multimodal_processor.py  node_registry.py  node_tokens.py  reputation.py  response_aggregator.py  streaming.py  task_orchestrator.py
coordinator/templates/: chat.html  dashboard.html
data/: clubai.db  coordinator.key  iris.db  node.key
installer/: install.ps1  install.sh
node_agent/: Dockerfile  __init__.py  crypto.py  gpu_info.py  heartbeat.py  iris-node.spec  lmstudio_client.py  main.py  model_info.py  node_agent_openrouter.py  openrouter_client.py  standalone_main.py
scripts/: build-standalone.sh  create_token.py  recalculate_tiers.py  start_fake_nodes.sh
shared/: __init__.py  crypto_utils.py  models.py  protocol.py
tests/: __init__.py  test_crypto.py  test_integration.py  test_node_connection.py  test_reputation.py  test_task_orchestrator.py
(+12 files in other folders)
